--- a/Proyecto/src/Principal/VistaCliente_Agregar.form
+++ b/Proyecto/src/Principal/VistaCliente_Agregar.form
@@ -113,7 +113,7 @@
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\imagenes\user 128.png"/>
+              <Image iconType="3" name="/Iconos/user 128.png"/>
             </Property>
           </Properties>
           <Constraints>
