--- a/Proyecto/src/Principal/VistaMenu.form
+++ b/Proyecto/src/Principal/VistaMenu.form
@@ -188,7 +188,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\imagenes\icons8-configuraci&#xf3;n-del-administrador-24.png"/>
+              <Image iconType="3" name="/Iconos/icons8-configuraci&#xf3;n-del-administrador-24.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -200,7 +200,7 @@
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\imagenes\icons8-usuario-30.png"/>
+              <Image iconType="3" name="/Iconos/icons8-usuario-30.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -212,7 +212,7 @@
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\imagenes\icons8-en-inventario-30.png"/>
+              <Image iconType="3" name="/Iconos/icons8-en-inventario-30.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -224,7 +224,7 @@
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\imagenes\icons8-factura-24.png"/>
+              <Image iconType="3" name="/Iconos/icons8-factura-24.png"/>
             </Property>
           </Properties>
           <Constraints>
